add header part and style rule for it

--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boolando</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
+
 <body>
 
-  <header>
-    
+  <header class="d-flex">
+    <div class="container d-flex">
+
+      <div class="categories d-flex ">
+        <a href="">Donna</a>
+        <a href="">Uomo</a>
+        <a href="">Bambini</a>
+      </div>
+
+      <div class="logo">
+        <img src="./assets/img/boolean-logo.png" alt="">
+      </div>
+
+      <div class="actions d-flex">
+        <i class="fa-regular fa-user"></i>
+        <i class="fa-regular fa-heart"></i>
+        <i class="fa-solid fa-bag-shopping"></i>
+      </div>
+      
+
+
+
+
+    </div>
   </header>
   <!-- /header -->
 
@@ -21,4 +48,5 @@
   <!-- /footer -->
 
 </body>
+
 </html>
