add cards in main part whit pictures and price

--- a/index.html
+++ b/index.html
@@ -41,7 +41,61 @@
   </header>
   <!-- /header -->
 
-  <main></main>
+  <main>
+    <section class="container d-flex">
+
+      <div class="card">
+        <img src="./assets/img/1.webp" alt="">
+        <figcaption class="brand">Levi's</figcaption>
+        <h3>RELAXED FIT TEE UNISEX</h3>
+        <div class="price">14.99 &euro; </div>
+        <span class="past-price">29.99&euro;</span>
+      </div>
+
+      <div class="card">
+        <img src="./assets/img/2.webp" alt="">
+        <figcaption class="brand">Guess</figcaption>
+        <h3>ROSES TIE</h3>
+        <div class="price">20,99 &euro;</div>
+        <span class="past-price">29.99&euro;</span>
+      </div>
+
+      <div class="card">
+        <img src="./assets/img/3.webp" alt="">
+        <figcaption class="brand">Come Zucchero Filato</figcaption>
+        <h3>VOGLIA DI COLORI PASTELLO</h3>
+        <div class="price">129.99 &euro;</div>
+        <span class="past-price">184.99&euro;</span>
+      </div>
+      
+      <div class="card">
+        <img src="./assets/img/4.webp" alt="">
+        <figcaption class="brand">Levi's</figcaption>
+        <h3>TEE UNISEX</h3>
+        <div class="price">14.99</div>
+        <span class="past-price">29.99&euro;</span>
+      </div>
+
+      <div class="card">
+        <img src="./assets/img/5.webp" alt="">
+        <figcaption class="brand">Maya Deluxe</figcaption>
+        <h3>STRIPE BODICE</h3>
+        <div class="price">99.99 &euro;</div>
+      </div>
+
+      <div class="card">
+        <img src="./assets/img/6.webp" alt="">
+        <figcaption class="brand">Esprit</figcaption>
+        <h3>MAGLIONE - BLACK</h3>
+        <div class="price">29.99 &euro;</div>
+      </div>
+  
+
+
+
+      
+    </section>
+  </main>
   <!-- /main -->
 
   <footer></footer>
