--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         <h3>RELAXED FIT TEE UNISEX</h3>
         <div class="price">14.99 &euro; </div>
         <span class="past-price">29.99&euro;</span>
+        <div class="tag d-flex">
+          <div class="discount">-50%</div>
+          <div class="details">Sostenibilita`</div>     
+        </div>
+
       </div>
 
       <div class="card">
@@ -58,6 +63,9 @@
         <h3>ROSES TIE</h3>
         <div class="price">20,99 &euro;</div>
         <span class="past-price">29.99&euro;</span>
+        <div class="tag d-flex">
+          <div class="discount">-30%</div>
+        </div>
       </div>
 
       <div class="card">
@@ -66,6 +74,10 @@
         <h3>VOGLIA DI COLORI PASTELLO</h3>
         <div class="price">129.99 &euro;</div>
         <span class="past-price">184.99&euro;</span>
+
+        <div class="tag d-flex">
+          <div class="discount">-30%</div>
+        </div>
       </div>
       
       <div class="card">
@@ -74,6 +86,10 @@
         <h3>TEE UNISEX</h3>
         <div class="price">14.99</div>
         <span class="past-price">29.99&euro;</span>
+         <div class="tag d-flex">
+          <div class="discount">-50%</div>
+          <div class="details">Sostenibilita`</div>     
+        </div>
       </div>
 
       <div class="card">
@@ -88,6 +104,10 @@
         <figcaption class="brand">Esprit</figcaption>
         <h3>MAGLIONE - BLACK</h3>
         <div class="price">29.99 &euro;</div>
+        <div class="tag d-flex">
+            <div class="details">Sostenibilita`</div>
+        </div>
+        
       </div>      
     </section>
   </main>
