add heart symbol to pictures

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
           <div class="discount">-50%</div>
           <div class="details">Sostenibilita`</div>     
         </div>
-
+        <div class="heart">
+          <i class="fa-solid fa-heart"></i>
+        </div>
       </div>
 
       <div class="card">
@@ -66,6 +68,9 @@
         <div class="tag d-flex">
           <div class="discount">-30%</div>
         </div>
+        <div class="heart">
+          <i class="fa-solid fa-heart"></i>
+        </div>
       </div>
 
       <div class="card">
@@ -74,9 +79,11 @@
         <h3>VOGLIA DI COLORI PASTELLO</h3>
         <div class="price">129.99 &euro;</div>
         <span class="past-price">184.99&euro;</span>
-
         <div class="tag d-flex">
           <div class="discount">-30%</div>
+        </div>
+        <div class="heart">
+          <i class="fa-solid fa-heart"></i>
         </div>
       </div>
       
@@ -90,6 +97,9 @@
           <div class="discount">-50%</div>
           <div class="details">Sostenibilita`</div>     
         </div>
+        <div class="heart">
+          <i class="fa-solid fa-heart"></i>
+        </div>
       </div>
 
       <div class="card">
@@ -97,6 +107,9 @@
         <figcaption class="brand">Maya Deluxe</figcaption>
         <h3>STRIPE BODICE</h3>
         <div class="price">99.99 &euro;</div>
+        <div class="heart">
+          <i class="fa-solid fa-heart"></i>
+        </div>
       </div>
 
       <div class="card">
@@ -107,7 +120,9 @@
         <div class="tag d-flex">
             <div class="details">Sostenibilita`</div>
         </div>
-        
+        <div class="heart">
+          <i class="fa-solid fa-heart"></i>
+        </div>        
       </div>      
     </section>
   </main>
