add images over-layer

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <div class="heart">
           <i class="fa-solid fa-heart"></i>
         </div>
+        <div class="hover-pic">
+          <img src="./assets/img/1b.webp" alt="">
+        </div>
       </div>
 
       <div class="card">
@@ -71,6 +74,9 @@
         <div class="heart">
           <i class="fa-solid fa-heart"></i>
         </div>
+        <div class="hover-pic">
+          <img src="./assets/img/2b.webp" alt="">
+        </div>
       </div>
 
       <div class="card">
@@ -84,6 +90,9 @@
         </div>
         <div class="heart">
           <i class="fa-solid fa-heart"></i>
+        </div>
+        <div class="hover-pic">
+          <img src="./assets/img/3b.webp" alt="">
         </div>
       </div>
       
@@ -100,6 +109,9 @@
         <div class="heart">
           <i class="fa-solid fa-heart"></i>
         </div>
+        <div class="hover-pic">
+          <img src="./assets/img/4b.webp" alt="">
+        </div>
       </div>
 
       <div class="card">
@@ -109,6 +121,9 @@
         <div class="price">99.99 &euro;</div>
         <div class="heart">
           <i class="fa-solid fa-heart"></i>
+        </div>
+        <div class="hover-pic">
+          <img src="./assets/img/5b.webp" alt="">
         </div>
       </div>
 
@@ -122,7 +137,10 @@
         </div>
         <div class="heart">
           <i class="fa-solid fa-heart"></i>
-        </div>        
+        </div>  
+        <div class="hover-pic">
+          <img src="./assets/img/6b.webp" alt="">
+        </div>      
       </div>      
     </section>
   </main>
